# wheelwright

./: .gitignore  CHANGELOG.md  README.md  README_HOOKS.md  SOLUTION_ISSUE_2.md  pyproject.toml  quickstart.sh
.github/: copilot-instructions.md
.github/agents/: sage-pypi-publisher.agent.md  wheelwright.agent.md
.github/chatmodes/: sage-pypi-publisher.agent.md.chatmode.md  sage-pypi-publisher.chatmode.md  wheelwright.agent.md.chatmode.md
.github/workflows/: ci.yml
hooks/: pre-commit  pre-push
scripts/: publish_copilot_instructions.py
src/pypi_publisher/: _version.py  cli.py  compiler.py  detector.py  hooks.py  manylinux_builder.py  manylinux_builder.py.bak
src/wheelwright/: __init__.py  _version.py  cli.py  compiler.py  detector.py  hooks.py  manylinux_builder.py
tests/: test_compiler_copy_filter.py  test_detector.py  test_exceptions.py  test_version_source_contract.py
