[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isage-pypi-publisher"
version = "0.1.8.4"
description = "Python bytecode compiler and PyPI publishing toolkit for monorepos"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "IntelliStream Team", email = "shuhao_zhang@hust.edu.cn" }
]
maintainers = [
    { name = "IntelliStream Team", email = "shuhao_zhang@hust.edu.cn" }
]
keywords = [
    "pypi",
    "publishing",
    "bytecode",
    "compiler",
    "monorepo",
    "packaging",
    "wheel",
    "build",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
]
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
    "typer>=0.9.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "tomli>=2.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
]

[project.scripts]
sage-pypi-publisher = "pypi_publisher.cli:main"

[project.urls]
Homepage = "https://github.com/intellistream/pypi-publisher"
Documentation = "https://github.com/intellistream/pypi-publisher#readme"
Repository = "https://github.com/intellistream/pypi-publisher"
Issues = "https://github.com/intellistream/pypi-publisher/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.pyi"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

